seccion tasas, productos y comodin

--- a/mobile-first/index.html
+++ b/mobile-first/index.html
@@ -30,19 +30,19 @@
                         <table>
                             <tr>
                                 <td class="table__top-left">Bitcoin<span></span></td>
-                                <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
+                                <td class="table__top-right table__right">$1.96 <span class="icon-card down"></span></td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
-                                <td class="table__right">$0.07<span class="up"></span></td>
+                                <td class="table__right">$0.07<span class="icon-card up"></span></td>
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table__right">$2.17<span class="down"></span></td>
+                                <td class="table__right">$2.17<span class="icon-card down"></span></td>
                             </tr>
                             <tr>
                                 <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table__right" >$4.96<span class="down"></span></td>
+                                <td class="table__bottom-right table__right" >$4.96<span class="icon-card down"></span></td>
                             </tr>
                         </table>
                     </div>
@@ -81,22 +81,39 @@
         </section>
         </section>
         <section class="main-product-detail">
-            <span>
+            <span class="product-detail--batata-logo">
             </span>
-            <div>
+            <div class="product-detail--title"> 
                 <h2>Creamos un producto sin comparación</h2>
                 <p>Confiable y diseño para su uso diario.</p>
             </div>
             <section class="product-cards--container">
                 <article class="product-detail--card">
-                    <span class="clock"></span>
+                    <span class="icon-card clock"></span>
                     <h3 class="product--card-title">Tiempo real</h3>
                     <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
                 </article>
+                <article class="product-detail--card">
+                    <span class="icon-card eye"></span>
+                    <h3 class="product--card-title">No hay tasas escondidas</h3>
+                    <p class="product--card-body">Ni en la compra, ni al momento de exit. Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon-card dollar"></span>
+                    <h3 class="product--card-title">Compra monedas</h3>
+                    <p class="product--card-body">No más rumores, con Batabit sabés el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="icon-card check"></span>
+                    <h3 class="product--card-title">Información confiable</h3>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
             </section>
         </section>
-        <section><h2>1</h2></section>
-        <section><h2>2</h2></section>
+        <section class="bitcoin-img-container">
+            <h2>Conocelo Hoy</h2>
+        </section>
+        <section></section>
     </main>
     <footer></footer>
 </body>
