--- a/mobile-first/index.html
+++ b/mobile-first/index.html
@@ -113,7 +113,41 @@
         <section class="bitcoin-img-container">
             <h2>Conocelo Hoy</h2>
         </section>
-        <section></section>
+        <div id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+        <section class="plans-container--slider">
+            <article class="plans-container--card of">
+                <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoge este<span></span></button>
+                    </div>
+            </article>
+            <article class="plans-container--card">
+                <p class="month">Mensual</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>19</p>
+                        <p class="plan-card--saving">*Todos los beneficios</p>
+                        <button class="plan-card--ca">Escoge este<span></span></button>
+                    </div>
+            </article>
+            <article class="plans-container--card">
+                <p class="forever">Por siempre</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Único</h3>
+                        <p class="plan-card--price"><span>$</span>249</p>
+                        <p class="plan-card--saving">*Descuento exclusivo</p>
+                        <button class="plan-card--ca">Escoge este<span></span></button>
+                    </div>
+            </article>
+        </section>
+        </div>
     </main>
     <footer></footer>
 </body>
