--- a/mobile-first/index.html
+++ b/mobile-first/index.html
@@ -119,21 +119,21 @@
                 <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
             </div>
         <section class="plans-container--slider">
-            <article class="plans-container--card of">
-                <p class="recommended">Recomendado</p>
-                    <div class="plan-info-container">
-                        <h3 class="plan-card--title">Pago Anual</h3>
-                        <p class="plan-card--price"><span>$</span>99</p>
-                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
-                        <button class="plan-card--ca">Escoge este<span></span></button>
-                    </div>
-            </article>
             <article class="plans-container--card">
                 <p class="month">Mensual</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Mensual</h3>
                         <p class="plan-card--price"><span>$</span>19</p>
                         <p class="plan-card--saving">*Todos los beneficios</p>
+                        <button class="plan-card--ca">Escoge este<span></span></button>
+                    </div>
+            </article>
+            <article class="plans-container--card of">
+                <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
                         <button class="plan-card--ca">Escoge este<span></span></button>
                     </div>
             </article>
@@ -149,6 +149,17 @@
         </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="footer-right">
+            <img src="assets/imgs/logo-footer.svg" alt="Logo de batatbit 2021">
+        </section>
+    </footer>
 </body>
 </html>
