--- a/rabbit-land/index.html
+++ b/rabbit-land/index.html
@@ -7,6 +7,10 @@
         <title>Apilamiento</title>
         <script src="/scripts.js"></script>
         <style>
+            @font-face {
+            font-family: "Funny Pirates";
+            src: url('../fonts/Funny-Pirates.otf');
+            }
               :root {
                 --dark-brown: #c76b3d;
                 --light-brown: #d2724b;
@@ -26,7 +30,7 @@
                 
             .phone {
                 position: relative;
-                border: 8px solid black;
+                border: 8px solid #e1e1e1;
                 border-radius: 40px;
                 width: 300px;
                 height: 600px;
@@ -41,6 +45,8 @@
                 top: 7%;
                 width: 100%;
                 text-align: center;
+                font-family: "Funny Pirates";
+                color: #333;
             }
 
             .score {
@@ -48,7 +54,9 @@
                 left: 50%;
                 top: 0;
                 transform: translate(-50%, 0);
-                 font-size: 1.5rem;
+                font-size: 1.5rem;
+                font-family: "Funny Pirates";
+                color: #333;
             }
 
             .bunny {
